@@ -5,6 +5,8 @@ X-editable changelog
 
 Version 1.4.2 wip
 ----------------------------
+[bug #149] datepicker not shown when showbuttons = false (vitalets)
+[bug #133] clear button incorect position due to parent line-height property (vitalets)
 [bug #141] data-value ignored for empty elements (vitalets)
 [bug #137] fix empty class for delegated element (vitalets)
 [enh #121] add support of momentjs 2.0.0 in combodate (vitalets)
